--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -566,7 +566,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Notifications-->
         <scene sceneID="egx-gs-Kn6">
             <objects>
-                <tableViewController id="WrM-6l-Y2w" sceneMemberID="viewController">
+                <tableViewController id="WrM-6l-Y2w" customClass="NotificationsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="o2y-XC-hUN">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -760,7 +760,7 @@ document layout — There is some information that is relevant for navigation th
         <!--My Entries-->
         <scene sceneID="WdR-4f-3m2">
             <objects>
-                <tableViewController id="jOK-yO-Eaf" sceneMemberID="viewController">
+                <tableViewController id="jOK-yO-Eaf" customClass="MyEntriesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Np5-ir-5dO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -814,7 +814,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Why I love Code-->
         <scene sceneID="Yjr-4z-w4f">
             <objects>
-                <viewController id="LHk-NA-tAy" sceneMemberID="viewController">
+                <viewController id="LHk-NA-tAy" customClass="EntryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="r9B-y1-1IP"/>
                         <viewControllerLayoutGuide type="bottom" id="tol-Hw-DyX"/>
@@ -872,8 +872,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Top Entries-->
         <scene sceneID="pXT-8o-H5b">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="POd-Oa-KXP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tableViewController id="1qC-sf-Kd6" sceneMemberID="viewController">
+                <tableViewController id="1qC-sf-Kd6" customClass="TopEntriesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="v4B-9s-bPa">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -920,13 +919,14 @@ document layout — There is some information that is relevant for navigation th
                     </tableView>
                     <navigationItem key="navigationItem" title="Top Entries" id="TzQ-rj-NNu"/>
                 </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="POd-Oa-KXP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="704" y="2233"/>
         </scene>
         <!--Top Tags-->
         <scene sceneID="5Yu-vg-QnM">
             <objects>
-                <tableViewController id="zfY-YO-v8y" sceneMemberID="viewController">
+                <tableViewController id="zfY-YO-v8y" customClass="TopTagsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="vCQ-JB-djb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -980,7 +980,7 @@ document layout — There is some information that is relevant for navigation th
         <!--My Followers-->
         <scene sceneID="jJJ-mX-z09">
             <objects>
-                <tableViewController id="hai-R8-orQ" sceneMemberID="viewController">
+                <tableViewController id="hai-R8-orQ" customClass="MyFollowersTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="RmQ-N3-DmY">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1122,7 +1122,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Top Entries-->
         <scene sceneID="1Bb-UJ-aO5">
             <objects>
-                <viewController id="GGg-ZM-lP6" sceneMemberID="viewController">
+                <viewController id="GGg-ZM-lP6" customClass="EntryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="AeQ-qa-3cv"/>
                         <viewControllerLayoutGuide type="bottom" id="DnI-Tl-rPv"/>
@@ -1234,7 +1234,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Top Tags-->
         <scene sceneID="bNo-07-tOU">
             <objects>
-                <viewController id="kr0-AS-F1Q" sceneMemberID="viewController">
+                <viewController id="kr0-AS-F1Q" customClass="EntryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GSQ-eh-m8X"/>
                         <viewControllerLayoutGuide type="bottom" id="7no-DW-n9c"/>
@@ -1346,7 +1346,7 @@ document layout — There is some information that is relevant for navigation th
         <!--Quack Quack-->
         <scene sceneID="aTT-is-vhS">
             <objects>
-                <viewController id="nCr-2o-Riu" sceneMemberID="viewController">
+                <viewController id="nCr-2o-Riu" customClass="EntryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gGW-SG-GhI"/>
                         <viewControllerLayoutGuide type="bottom" id="SUV-sQ-DMM"/>
