--- a/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1071,13 +1071,13 @@ document layout — There is some information that is relevant for navigation th
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Fy1-rb-RHz">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TopTagsTableViewCell" id="Fy1-rb-RHz" customClass="TopTagsTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fy1-rb-RHz" id="Cng-u7-mf1">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="qih-EJ-Kbu" kind="show" id="21y-cR-SNG"/>
+                                    <segue destination="qih-EJ-Kbu" kind="show" identifier="TopTagsToJournalDetail" id="21y-cR-SNG"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
