--- a/SocialJournal/SocialJournal/TopTagsTableViewCell.xib
+++ b/SocialJournal/SocialJournal/TopTagsTableViewCell.xib
@@ -6,27 +6,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TopTagsTableViewCell" rowHeight="83" id="PUT-Zc-Tac" customClass="TopTagsTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="579" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TopTagsTableViewCell" rowHeight="90" id="tPV-oY-tps" customClass="TopTagsTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="600" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PUT-Zc-Tac" id="O4h-kb-Xn1">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tPV-oY-tps" id="7WV-VI-en7">
                 <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="#bottom " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="TZX-rp-Zhr">
-                        <rect key="frame" x="0.0" y="8" width="600" height="38"/>
+                        <rect key="frame" x="8" y="8" width="600" height="38"/>
                         <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="30"/>
                         <color key="textColor" red="0.80392156859999997" green="0.70196078429999997" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.64999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="numUses" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfR-mL-dQu" userLabel="numUses">
-                        <rect key="frame" x="405" y="44" width="600" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.64999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@anonDrake" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axR-P2-H1v">
+                        <rect key="frame" x="8" y="54" width="600" height="44"/>
                         <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="13"/>
                         <color key="textColor" red="0.90980392160000001" green="0.86666666670000003" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.64999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@anonDrake" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axR-P2-H1v">
-                        <rect key="frame" x="8" y="44" width="600" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.64999997615814209" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="numUses" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfR-mL-dQu" userLabel="numUses">
+                        <rect key="frame" x="414" y="54" width="600" height="44"/>
                         <fontDescription key="fontDescription" name="GeezaPro" family="Geeza Pro" pointSize="13"/>
                         <color key="textColor" red="0.90980392160000001" green="0.86666666670000003" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -34,7 +34,7 @@
                 </subviews>
                 <color key="backgroundColor" red="0.01176470588" green="0.21176470589999999" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="229.5" y="270.5"/>
+            <point key="canvasLocation" x="229" y="497"/>
         </tableViewCell>
     </objects>
 </document>
